# Gigasheet

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  app.cpp
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  release.yml
src/: app.cpp
src/.cph/: .app.cpp_23efa9b32e02d4dcf2451bee729c62fb.prob
src/model/: column_types.hpp  mmapped_table.cpp  mmapped_table.hpp
src/parser/: ast.hpp  parser.cpp
src/storage/: csv_importer.cpp  csv_importer.hpp  memory_usage.cpp  memory_usage.hpp
src/ui/: app.cpp  app.hpp  spreadsheet_frame.cpp  spreadsheet_frame.hpp
storage/: csv_importer.cpp
